recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:41: error: reassignment to val
  i=i+1
   ^